# backtesting-engine

./: .env.example  .gitignore  Makefile  README.md  config.py  dashboard.py  export_site.py  glossary.py  publish.py  pyproject.toml  run.py
.streamlit/: config.toml
data/: kite_auth.py  kite_source.py  source.py  yahoo_source.py
docs/brainstorms/: local-backtesting-harness-requirements.md
docs/plans/: 2026-05-30-001-feat-local-backtesting-harness-plan.md  2026-06-01-001-feat-lean-publish-workflow-plan.md
engine/: oos.py  persistence.py  runner.py
site/: README.md  app.js  index.html  style.css
strategies/: __init__.py  ema_cross.py  santa_rally.py  turn_of_month.py  turnaround_tuesday.py  turnaround_tuesday_intraday.py  turnaround_tuesday_quantified.py
tests/: conftest.py  test_cli.py  test_config.py  test_dashboard.py  test_export_site.py  test_glossary.py  test_intraday.py  test_kite_source.py  test_oos.py  test_persistence.py  test_publish.py  test_quantified.py  test_runner.py  test_source.py  test_strategies.py  test_turn_of_month.py
