[project]
name = "backtesting-engine"
version = "0.1.0"
description = "Local backtesting harness for Nifty/BankNifty index strategies (daily + intraday)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "backtesting==0.6.5",
    "jugaad-data>=0.33.1",
    "pandas",      # not a declared jugaad-data dep; required explicitly
    "pyarrow",     # parquet for saved equity curves
    "streamlit",   # read-only dashboard
    "python-dotenv",  # load .env for KITE_*/VERCEL_* config
]

[project.optional-dependencies]
dev = ["pytest", "watchdog"]   # watchdog: fast Streamlit run-on-save file watching
kite = ["kiteconnect"]   # intraday/daily data via Zerodha Kite Connect

[tool.pytest.ini_options]
testpaths = ["tests"]
